Make admin nav wrap and not fixed on mobile

--- a/app/assets/stylesheets/admin/_admin_bar.scss
+++ b/app/assets/stylesheets/admin/_admin_bar.scss
@@ -1,7 +1,7 @@
 .m-admin_bar {
-  position: fixed;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   border-bottom: 1px solid $color-border-light;
@@ -13,6 +13,10 @@
   h3 a {
     font-family: $header-font;
     white-space: nowrap;
+  }
+
+  @media #{$from-large} {
+    position: fixed;
   }
 }
 
